--- a/Math/Textbooks/Calculus/Calculus-ConceptsAndContexts/B.yml
+++ b/Math/Textbooks/Calculus/Calculus-ConceptsAndContexts/B.yml
@@ -465,3 +465,12 @@ notes:
       ```
     Annotations: ''
   tags: []
+- id: 0
+  skip: true
+  fields:
+    Front: |
+      CCAC B 55: Let $P(x_1,y_1)$ be a point on the ellipse $x^2/a^2 + y^2/b^2 = 1$ with foci $F_1$ and $F_2$, and let $\alpha$ and $\beta$ be the angles between the lines $PF_1$, $PF_2$ and the ellipse, as shown in the figure. Prove that $\alpha=\beta$. This explains how whispering galleries and lithotripsy work. Sound coming from one focus is reflected, and passes through the other focus. (Hint: use the formula in problem 17 on CCAC page 251 to show that $\tan\alpha
+      = \tan\beta$.)
+    Back: |
+      ...
+    Annotations: ''
