--- a/Math/Textbooks/Calculus/Calculus-ConceptsAndContexts/02-2.yml
+++ b/Math/Textbooks/Calculus/Calculus-ConceptsAndContexts/02-2.yml
@@ -9,4 +9,19 @@ defaults:
   - CCAC-02-LimitsAndDerivatives
   - CCAC-02.2-TheLimitOfAFunction
   markdownTabLength: 2
-notes: []
+notes:
+- id: 1546217034595
+  fields:
+    Front: |
+      CCAC 02.2 07: Sketch the graph of the function, and use it to determine the values of $a$ for which $\lim_{x\to a}{f(x)}$ exists. If it does not exist, explain why.
+      $$
+      f(x) =
+      \begin{cases}
+        1 + x & \text{if $x<-1$} \\
+        x^2 & \text{if $-1\le x<1$} \\
+        2-x & \text{if $1\le x$} \\
+      \end{cases}
+      $$
+    Back: |
+      $\lim_{x\to a}{f(x)}$ exists for all $a$ except $a=-1$.
+    Annotations: ''
