--- a/Math/Textbooks/Calculus/Calculus-ConceptsAndContexts/02-2.yml
+++ b/Math/Textbooks/Calculus/Calculus-ConceptsAndContexts/02-2.yml
@@ -61,3 +61,15 @@ notes:
       b. $2$
       c. Does not exist; lower and upper limits don't match.
     Annotations: ''
+- id: 1546217035312
+  tags: []
+  fields:
+    Front: |
+      CCAC 02.2 17: Guess the value of the limit (if it exists) by evaluating the function at the given numbers (correct to six decimal places).
+      $$
+      \lim_{x\to 2}\frac{x^2 - 2x}{x^2 - x - 2},
+      $$
+      $x=2.5$, $2.1$, $2.05$, $2.01$, $2.005$, $2.001$, $1.9$, $1.95$, $1.99$, $1.995$, $1.999$
+    Back: |
+      $\frac{2}{3}$
+    Annotations: ''
