--- a/Math/Textbooks/Calculus/Calculus-ConceptsAndContexts/02-2.yml
+++ b/Math/Textbooks/Calculus/Calculus-ConceptsAndContexts/02-2.yml
@@ -73,3 +73,15 @@ notes:
     Back: |
       $\frac{2}{3}$
     Annotations: ''
+- id: 1546217035490
+  tags: []
+  fields:
+    Front: |
+      CCAC 02.2 19: Guess the value of the limit (if it exists) by evaluating the function at the given numbers (correct to six decimal places).
+      $$
+      \lim_{t\to 0}\frac{e^{5t} - 1}{t},
+      $$
+      $t=\pm 0.5$, $\pm 0.1$, $\pm 0.01$, $\pm 0.001$, $\pm 0.0001$
+    Back: |
+      $5$
+    Annotations: ''
