--- a/Math/Textbooks/Calculus/Calculus-ConceptsAndContexts/02-2.yml
+++ b/Math/Textbooks/Calculus/Calculus-ConceptsAndContexts/02-2.yml
@@ -146,3 +146,17 @@ notes:
       )
       ```
     Annotations: ''
+- id: 1546217036445
+  tags: []
+  fields:
+    Front: |
+      CCAC 02.2 29:
+      a. Evaluate the function $f(x)=x^2 - (2^x/1000)$ for $x=1$, $0.8$, $0.6$, $0.4$, $0.2$, $0.1$, $0.05$, and guess the value of
+      $$
+      \lim_{x\to 0}\left(x^2 - \frac{2^x}{1000}\right)
+      $$
+      b. Evaluate $f(x)$ for $x=0.04$, $0.02$, $0.01$, $0.005$, $0.003$, and $0.001$. Guess again.
+    Back: |
+      a. $0.998000$, $0.638259$, $0.358484$, $0.158680$, $0.038851$, $0.008928$, $0.001465$; $0$
+      b. $0.00572$, $-0.000614$, $-0.000907$, $-0.000978$, $-0.000993$, $-0.001000$; $-0.001$
+    Annotations: ''
