--- a/Math/Textbooks/Calculus/Calculus-ConceptsAndContexts/02-3.yml
+++ b/Math/Textbooks/Calculus/Calculus-ConceptsAndContexts/02-3.yml
@@ -9,4 +9,21 @@ defaults:
   - CCAC-02-LimitsAndDerivatives
   - CCAC-02.3-CalculatingLimitsUsingTheLimitLaws
   markdownTabLength: 2
-notes: []
+notes:
+- id: 1546217043671
+  tags: []
+  fields:
+    Front: |
+      CCAC 02.3 01a: Given that
+      $$
+      \lim_{x\to 2}f(x) = 4,\
+      \lim_{x\to 2}g(x) = -2,\
+      \lim_{x\to 2}h(x) = 0,\
+      $$
+      find the following limit. If the limit does not exist, explain why.
+      $$
+      \lim_{x\to 2}[f(x)+5g(x)]
+      $$
+    Back: |
+      $-6$
+    Annotations: ''
