--- a/Math/Textbooks/Calculus/Calculus-ConceptsAndContexts/02-3.yml
+++ b/Math/Textbooks/Calculus/Calculus-ConceptsAndContexts/02-3.yml
@@ -27,3 +27,20 @@ notes:
     Back: |
       $-6$
     Annotations: ''
+- id: 1546217043875
+  tags: []
+  fields:
+    Front: |
+      CCAC 02.3 01b: Given that
+      $$
+      \lim_{x\to 2}f(x) = 4,\
+      \lim_{x\to 2}g(x) = -2,\
+      \lim_{x\to 2}h(x) = 0,\
+      $$
+      find the following limit. If the limit does not exist, explain why.
+      $$
+      \lim_{x\to 2}[g(x)]^3
+      $$
+    Back: |
+      $-8$
+    Annotations: ''
