--- a/Math/Textbooks/Calculus/Calculus-ConceptsAndContexts/02-3.yml
+++ b/Math/Textbooks/Calculus/Calculus-ConceptsAndContexts/02-3.yml
@@ -44,3 +44,20 @@ notes:
     Back: |
       $-8$
     Annotations: ''
+- id: 1546217044087
+  tags: []
+  fields:
+    Front: |
+      CCAC 02.3 01c: Given that
+      $$
+      \lim_{x\to 2}f(x) = 4,\
+      \lim_{x\to 2}g(x) = -2,\
+      \lim_{x\to 2}h(x) = 0,\
+      $$
+      find the following limit. If the limit does not exist, explain why.
+      $$
+      \lim_{x\to 2}\sqrt{f(x)}
+      $$
+    Back: |
+      $2$
+    Annotations: ''
