--- a/Math/Textbooks/Calculus/Calculus-ConceptsAndContexts/02-3.yml
+++ b/Math/Textbooks/Calculus/Calculus-ConceptsAndContexts/02-3.yml
@@ -78,3 +78,24 @@ notes:
     Back: |
       $-6$
     Annotations: ''
+- id: 1546217044596
+  tags: []
+  fields:
+    Front: |
+      CCAC 02.3 01e: Given that
+      $$
+      \lim_{x\to 2}f(x) = 4,\
+      \lim_{x\to 2}g(x) = -2,\
+      \lim_{x\to 2}h(x) = 0,\
+      $$
+      find the following limit. If the limit does not exist, explain why.
+      $$
+      \lim_{x\to 2}\frac{g(x)}{h(x)}
+      $$
+    Back: |
+      Does not exist; if it did, it would have to equal
+      $$
+      \frac{\lim_{x\to 2}g(x)}{\lim_{x\to 2}h(x)}
+      $$
+      in which the denominator is zero, because there is no way to cancel the denominator.
+    Annotations: ''
